@@ -196,6 +196,7 @@ jlong __jlongpointer mu	// probs for multiplying
 	// compute poisson probabilities (fox/glynn)
 	PS_PrintToMainLog(env, "\nUniformisation: q.t = %f x %f = %f\n", unif, time, unif * time);
 	fgw = fox_glynn(unif * time, 1.0e-300, 1.0e+300, term_crit_param_unif);
+	if (fgw.right < 0) throw "Overflow in Fox-Glynn computation (time bound too big?)";
 	for (i = fgw.left; i <= fgw.right; i++) {
 		fgw.weights[i-fgw.left] /= fgw.total_weight;
 	}
@@ -339,6 +340,10 @@ jlong __jlongpointer mu	// probs for multiplying
 	// catch exceptions: register error, free memory
 	} catch (std::bad_alloc e) {
 		PS_SetErrorMessage("Out of memory");
+		if (sum) delete sum;
+		sum = 0;
+	} catch (const char *err) {
+		PS_SetErrorMessage(err);
 		if (sum) delete sum;
 		sum = 0;
 	}
